--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/page.jsx", "components/ui/background-beams-with-collision.jsx", "components/ui/loader.jsx", "components/ui/multi-step-loader.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/page.jsx", "components/ui/background-beams-with-collision.jsx", "components/ui/loader.jsx", "components/ui/multi-step-loader.jsx", "lib/supabaseClient.js"],
   "exclude": ["node_modules"]
 }
